@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.3144 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.3145 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -698,3 +698,6 @@ Changes from NetBSD 10.0 to NetBSD 11.0:
 		  for the Microchip Technology / SMSC EMC210X and EMC230X
 		  fan controllers. [brad 20250311]
 	expat: Import 2.7.0 (security fixes). [wiz 20250314]
+	clock_getres(2): Support CLOCK_PROCESS_CPUTIME_ID and
+		CLOCK_THREAD_CPUTIME_ID. The syscall previously returned
+		EINVAL for these two clocks. [pho 20250319]
